# exposureiq

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  EXPOSUREIQ_PLAN.md  Makefile  README.md  docker-compose.yml  exposureiq-for-tenable-one.md  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile
backend/src/t1_cve_enricher/: __init__.py  config.py  main.py
backend/src/t1_cve_enricher/api/: __init__.py  export.py  routes.py
backend/src/t1_cve_enricher/db/: __init__.py  connection.py  schema.sql
backend/src/t1_cve_enricher/enrichment/: plugin_matcher.py  source_category.py
backend/src/t1_cve_enricher/tenable/: __init__.py  client.py  cve_scraper.py  plugins_client.py
backend/src/t1_cve_enricher/workers/: __init__.py  cve_enricher.py  findings_extractor.py  plugin_enricher.py  progress.py  scheduler.py  source_discovery.py
backend/tests/: test_cve_scraper.py  test_findings_extractor.py  test_source_category.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: ExplainModal.tsx  ExportButtons.tsx  FilterBar.tsx  FindingsTable.tsx  PipelineStatusBar.tsx  SettingsPanel.tsx  SeverityChart.tsx  ThemeToggle.tsx
frontend/src/lib/: api.ts  llm.ts  sourceCategory.ts  types.ts  useApiKey.ts  useTheme.ts
frontend/src/styles/: index.css
scripts/: README.md  diagnose_source_shapes.py
