[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "t1-cve-enricher"
version = "0.1.0"
description = "Adds Tenable's CVE intelligence to third-party findings ingested into Tenable One."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Noel Reynolds" }
]
keywords = ["tenable", "cve", "vulnerability-management", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "apscheduler>=3.10.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "respx>=0.21.0",
    "types-beautifulsoup4>=4.12.0",
]

[project.scripts]
t1-cve-enricher = "t1_cve_enricher.main:cli"

[project.urls]
Homepage = "https://github.com/nreynolds-pub-git/t1-cve-enricher"
Repository = "https://github.com/nreynolds-pub-git/t1-cve-enricher"
Issues = "https://github.com/nreynolds-pub-git/t1-cve-enricher/issues"

[tool.hatch.build.targets.wheel]
packages = ["backend/src/t1_cve_enricher"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["backend/src", "backend/tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "RUF", # ruff-specific
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
]
ignore = [
    "E501",  # line-too-long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**/*.py" = ["B011"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["backend/src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["backend/tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
